force-app/main/default/objects/Meeting_Feedback__c/Meeting_Feedback__c.object-meta.xml
<CustomObject>
    <label>Meeting Feedback</label>
    <nameField>
        <displayFormat>MF-{0000}</displayFormat>
        <label>Meeting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>