force-app/main/default/objects/Meeting_Feedback__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Meeting Feedbacks</relationshipLabel>
    <relationshipName>Twilio_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>