force-app/main/default/objects/Meeting_Feedback__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Meeting Feedback</relationshipLabel>
    <relationshipName>Twilio_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>