force-app/main/default/objects/Meeting_Feedback__c/fields/Online_Lesson_Quality_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Online_Lesson_Quality_Feedback__c</fullName>
    <label>Online Lesson Quality Feedback</label>
    <length>255</length>
    <type>Text</type>
</CustomField>