force-app/main/default/objects/Meeting_Feedback__c/fields/Submitted_by__c.field-meta.xml
<CustomField>
    <fullName>Submitted_by__c</fullName>
    <label>Submitted by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>